fix chat command overflow

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -574,7 +574,7 @@ body::-webkit-scrollbar-thumb {
 
     &:focus {
       background: var(--white);
-      border: 1px solid var(--primary-color);
+      border: none;
     }
 
     &:placeholder {
